--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
             android:layout_weight="1" />
 
         <Button
+            android:id="@+id/logIn"
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="1"
