--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -26,6 +26,7 @@
                 android:layout_height="10px" />
 
             <Button
+                android:id="@+id/freeFall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="freeFall"
