--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -30,7 +30,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="freeFall"
-                android:text="Free Fall" />
+                android:fontFamily="serif"
+                android:gravity="center"
+                android:text="Free fall"
+                android:textColor="#06073E"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
 
