--- a/app/src/main/res/layout/activity_free_fall_results.xml
+++ b/app/src/main/res/layout/activity_free_fall_results.xml
@@ -32,6 +32,18 @@
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="1" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:onClick="plots"
+            android:text="Plots" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1" />
     </LinearLayout>
 
     <Space
