--- a/app/src/main/res/layout/activity_free_fall_plots.xml
+++ b/app/src/main/res/layout/activity_free_fall_plots.xml
@@ -13,7 +13,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="0px"
         android:layout_weight="2"
         android:fontFamily="serif"
         android:gravity="center"
@@ -35,7 +35,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="0px"
         android:layout_weight="2"
         android:fontFamily="serif"
         android:gravity="center"
