--- a/app/src/main/res/layout/activity_free_fall_plots.xml
+++ b/app/src/main/res/layout/activity_free_fall_plots.xml
@@ -61,6 +61,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="back"
                 android:text="Back" />
 
             <Space
