--- a/app/src/main/res/layout/activity_free_fall_plots.xml
+++ b/app/src/main/res/layout/activity_free_fall_plots.xml
@@ -21,6 +21,7 @@
                 android:layout_height="50px" />
 
             <TextView
+                android:id="@+id/heightTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif"
@@ -40,6 +41,7 @@
                 android:layout_height="30px" />
 
             <TextView
+                android:id="@+id/velocityTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif"
