--- a/app/src/main/res/layout/activity_free_fall_data.xml
+++ b/app/src/main/res/layout/activity_free_fall_data.xml
@@ -90,6 +90,7 @@
             android:layout_weight="1" />
 
         <Button
+            android:id="@+id/startButton"
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="1"
