--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -11,33 +11,69 @@
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="0px"
         android:layout_height="match_parent"
-        android:layout_weight="7">
+        android:layout_weight="5"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <Space
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="0px"
+            android:layout_weight="1" />
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="10px" />
+        <TextView
+            android:id="@+id/emailTV"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:fontFamily="serif"
+            android:gravity="center"
+            android:text="TextView"
+            android:textColor="#090835"
+            android:textSize="15sp"
+            android:textStyle="bold|italic"
+            tools:text="example@example.com" />
 
-            <Button
-                android:id="@+id/freeFall"
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="10">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="freeFall"
-                android:fontFamily="serif"
-                android:gravity="center"
-                android:text="Free fall"
-                android:textColor="#06073E"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </ScrollView>
+                android:orientation="vertical">
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="10px" />
+
+                <Button
+                    android:id="@+id/freeFallButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="serif"
+                    android:gravity="center"
+                    android:onClick="freeFall"
+                    android:text="Free fall"
+                    android:textColor="#06073E"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </ScrollView>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1" />
+    </LinearLayout>
 
     <Space
         android:layout_width="0px"
