--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -27,7 +27,7 @@
             android:id="@+id/emailTV"
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:fontFamily="serif"
             android:gravity="center"
             android:text="TextView"
@@ -44,7 +44,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:layout_weight="10">
+            android:layout_weight="20">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,6 +68,40 @@
                     android:textStyle="bold" />
             </LinearLayout>
         </ScrollView>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/creditsButton"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="4"
+            android:fontFamily="serif"
+            android:gravity="center"
+            android:text="Credits"
+            android:textColor="#06073E"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/logOutButton"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="4"
+            android:fontFamily="serif"
+            android:gravity="center"
+            android:text="Log Out"
+            android:textColor="#06073E"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <Space
             android:layout_width="match_parent"
