--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,5 +76,22 @@
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/signInButton"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:fontFamily="serif"
+            android:onClick="signIn"
+            android:text="Sign in"
+            android:textColor="#05133E"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1" />
     </LinearLayout>
 </LinearLayout>
