--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,27 +33,62 @@
             android:layout_height="0px"
             android:layout_weight="1" />
 
-        <EditText
-            android:id="@+id/emailET"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="1"
-            android:ems="10"
-            android:hint="example@example.com"
-            android:inputType="text" />
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <EditText
+                android:id="@+id/emailET"
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:ems="10"
+                android:hint="email address"
+                android:inputType="text" />
+
+            <Space
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="1" />
 
-        <EditText
-            android:id="@+id/passwordET"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPassword" />
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <EditText
+                android:id="@+id/passwordET"
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:ems="10"
+                android:hint="password"
+                android:inputType="textPassword" />
+
+            <Space
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <Space
             android:layout_width="match_parent"
